text overflow fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -152,9 +152,11 @@ html {
   text-align: center;
   font-size: 16px;
   color: #fff;
-  overflow: hidden;
   transition: 0.5s;
   width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .film__title:hover {
